<resources>
    <string name="app_name">Роствертол</string>


    <string name="title_news">Новости</string>
    <string name="title_sold">Услуги</string>
    <string name="title_events">Календарь</string>
    <string name="title_others">Прочее</string>
    <string name="title_newspaper">Газета</string>


    <string name="fck_strela">ФСК Стрела</string>
    <string name="cdk_rostov">СДК Роствертол</string>
    <string name="youth">Молодежь Роствертола</string>
    <string name="phone_book">Телефонная книга</string>

    <string name="december">Декабрь</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>


    <string-array name="dropdown_month">
        <item>За год</item>
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="dropdown_select_news">
        <item>Все</item>
        <item>ФСК Стрела </item>
        <item>СДК Роствертол</item>
        <item>Молодежь Роствертола</item>
    </string-array>


</resources>
