<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_sold"
        android:icon="@drawable/ic_discount"
        android:title="@string/title_sold"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_events_black_24dp"
        android:title="@string/title_events"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_newspaper"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_newspaper"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/ic_m"
        android:title="@string/title_others"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>
