<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/fr_events_choose_month_custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fr_calendar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_events"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


    <TableLayout
        android:id="@+id/month_table"
        android:layout_width="0dp"
        android:layout_height="560dp"
        android:gravity="center"
        android:stretchColumns="0,1,2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_events_choose_month_custom_toolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:id="@+id/btn_fr_calendar_december"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/december"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/btn_fr_calendar_january"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/january"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/btn_fr_calendar_february"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/february"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:id="@+id/btn_fr_calendar_march"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/march"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/btn_fr_calendar_april"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/april"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/btn_fr_calendar_may"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/may"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:id="@+id/btn_fr_calendar_june"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/june"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/btn_fr_calendar_july"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/july"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/btn_fr_calendar_august"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/august"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:id="@+id/btn_fr_calendar_september"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/september"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/btn_fr_calendar_october"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/october"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/btn_fr_calendar_november"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/november"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>